deploy/ngsa-memory/ngsa-memory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngsa-memory
  labels:
    app: ngsa-memory
    version: beta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngsa-memory
      version: beta
  template:
    metadata:
      labels:
        app: ngsa-memory
        version: beta
    spec:
      containers:
      - name: app
        imagePullPolicy: Always
        image: ghcr.io/retaildevcrews/ngsa-app:beta
        args:
          - --in-memory
          - --prometheus
          - --url-prefix
          - /memory
          - --burst-header
          - --burst-service
          - memory
          - --log-level
          - Warning
          - --request-log-level
          - Information
          - --zone
          - dev
          - --region
          - dev
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: ngsa-memory
  labels:
    app: ngsa-memory
spec:
  selector:
    app: ngsa-memory
  ports:
    - port: 8080
      name: http

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ngsa-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ngsa-vs
spec:
  hosts:
  - "*"
  gateways:
  - ngsa-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ngsa-memory
        port:
          number: 8088
