deploy/ngsa-memory/remote-filter-sidecar.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: burst-wasm-remote
  namespace: default
spec:
  workloadSelector:
    labels:
      app: ngsa
  configPatches:
  # The patch adds the WebAssembly to the listener/http connection manager
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      # the patch adds the WebAssembly to the pipeline
      operation: INSERT_BEFORE 
      value:
        name: burst-wasm-extension
        config_discovery:
          config_source:
            ads: {}
            initial_fetch_timeout: 0s # wait indefinitely to prevent bad Wasm fetch
          type_urls: [ "type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm" ]

  # The second patch provides config for filter, wasm http location
  - applyTo: EXTENSION_CONFIG
    match:
      context: SIDECAR_INBOUND
    patch:
      operation: INSERT_BEFORE
      value:
        name: burst-wasm-extension
        typed_config:
          "@type": type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              root_id: burst-wasm-root-id
              vm_config:
                vm_id: burst-wasm-vm-id
                runtime: envoy.wasm.runtime.v8
                allow_precompiled: true
                code:
                  remote:
                    sha256: 8f0ad93eeaff45f1ba0950928d5bdd30d6032b23b6191360e19c1b74504414ef
                    http_uri:
                      uri: https://raw.githubusercontent.com/retaildevcrews/ngsa-asb/new-wasm/wasm/burst_header_struct.wasm
                      cluster: burstcluster
                      timeout: 10s
              # The configuration for the Wasm extension itself
              configuration:
                "@type": "type.googleapis.com/google.protobuf.Struct"
                value:
                  service_cluster: "burstcluster"
                  service_authority: "burst.burstservice"
                  service_path: "/burstmetrics/deployments"
                  cache_seconds: 5
                  burst_header: "hello!"

  # The  patch adds the cluster that is referenced by the WebAssembly
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value:
        name: "burstcluster"
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: burstcluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: burst.burstservice
                    port_value: 8080
